--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Like🔥id1952">
-<meta property="og:description" content="💥Super💥IN">
-<meta property="og:image" content="https://img1.akspic.ru/crops/5/7/4/5/5/155475/155475-m850i_bmv_as_shnitcer-bmv_g15-bmw_8_seriya-bmw_i8-bmw_3_serii-1920x1080.jpg">
+<meta property="og:title" content="सभी पुरुषों के लिए अच्छी खबर!">
+<meta property="og:description" content="सिद्ध तरीका">
+<meta property="og:image" content="https://i.imgur.com/Nai145C.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
